[tool.poetry]
name = "concert-buddy"
version = "0.1.0"
description = ""
authors = ["Cracking FAANG <cracking.faang.channel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
